--- a/PTIT_CNTT4_IT104_SESSION02_EXERCISE04/PTIT_CNTT4_IT104_SESSION02_EXERCISE04.html
+++ b/PTIT_CNTT4_IT104_SESSION02_EXERCISE04/PTIT_CNTT4_IT104_SESSION02_EXERCISE04.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src=""></script>
+    <script src="./PTIT_CNTT4_IT104_SESSION02_EXERCISE04.js"></script>
 </body>
 </html>
